src/static/styles/main.css
/* ... */
.deck-exists {
  visibility: hidden;
}

.deck {
  float: left;
  width: 200px;
  height: auto;
  border: 1px solid black;
  border-radius: 5px;
  background: #758CA6;
  padding: 1em;
  margin-left: 1em;
  margin-top: 3em;
}
.deck .deck-top {
  height: 20px;
  color: white;
  font-size: 19px;
  display: inline;
}
.deck .deck-top img {
  float: right;
}
.deck .deck-top img:hover {
  cursor: pointer;
}
.card h1 {
  font-size: 20px;
  color: white;
}

.deck .card-field p {
  /*text-align: center;*/
}
.deck .card-field .card-label {
  color: #3b333f !important;
  font-family: GravityLight;
  text-align: center;
}

.deck .card-detail-btn {
  padding: 1em;
  background: white;
  border-radius: 5px;
  width: 100%;
  height: 20px;
  margin-top: 1em;
  border: None;
  font-size: 17px;
  font-family: GravityLight;
  text-align: left;
  color: black;
}

.deck .add-card-detail-btn {
  padding: 0;
  background: #758CA6;
  color: white;
  border-radius: 5px;
  width: 100%;
  height: 20px;
  margin-top: 1em;
  border: None;
  font-size: 15px;
  font-family: GravityLight;
  text-align: left;
}
.deck button:hover {
  cursor: pointer;
}


a {
  text-decoration: none;
}

#card-detail {
  visibility: hidden;
  height: 600px;
  border: 1px solid black;
  border-radius: 5px;
  width: 900px;
  margin: auto;
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background: #d1d2d5;
  -webkit-animation: fade-in-modal .3s forwards ease-out;
}

@-webkit-keyframes fade-in-modal {
  0% {
    -webkit-transform: scale(0.7);
    -moz-transform: scale(0.7);
    -ms-transform: scale(0.7);
    transform: scale(0.7);
    opacity: 0;
    -webkit-transition: all 0.3s;
    -moz-transition: all 0.3s;
    transition: all 0.3s;
  }
  100% {
    -webkit-transform: scale(1);
    -moz-transform: scale(1);
    -ms-transform: scale(1);
    transform: scale(1);
    opacity: 1;
  }
}


#card-detail-top button {
  padding: 0;
  background: red;
  border: 0px;
  border-radius: 5px;
  width: 75px;
  height: 100%;
  font-size: 12px;
  font-family: GravityLight;
  text-align: center;
  position: relative;
  bottom: 17px;
  left: 740px;
  color: white;
  line-height: 22px;
}


#card-detail-top button:hover {
  cursor: pointer;
}

#card-detail #card-detail-top {
  font-family: GravityLight;
  padding: 1em;
}
#card-detail #card-detail-navbar {
  height: 40px;
}
#card-detail #card-detail-navbar li {
  background: #758CA6;
  text-align: center;
  border-right: 1px solid black;
  height: 40px;
  padding-top: 10px;
  display: block;
}
#card-detail #card-detail-navbar a {
  display: block;
  font-family: GravityLight;
  text-transform: uppercase;
  color: white;
}
#card-detail #card-detail-navbar li:hover {
  background: #3B333F;
}
#card-detail #card-detail-navbar li:hover a {
  color: white;
}
#card-detail #card-detail-tabs {
  height: 443px;
  background: #3b333f;
  color: white;
}
#card-detail #card-detail-company {
  color: crimson;
  text-decoration: underline;
}
#card-detail #card-detail-position {
  color: #0074d9;
  text-decoration: underline;
}
#card-detail #card-detail-close:hover {
  cursor: pointer;
}
#card-detail .edit-fields {
  padding: 1em;
  text-align: center;
}
.card-edit {
  outline: none;
  width: 100px;
  height: 30px;
  border-radius: 5px;
  float: none;
  margin: 0 auto;
  display: block;
  margin-top: 1em;
  font-family: GravityLight;
  border: 1px solid black;
  background: #CF5946;
  color: white;
}
.card-edit:hover {
  cursor: pointer;
  background: #edaa4e;
}

.cancel-edit {
  outline: none;
  width: 100px;
  height: 30px;
  border-radius: 5px;
  float: none;
  margin: 0 auto;
  display: block;
  margin-top: 1em;
  font-family: GravityLight;
  border: 1px solid black;
  background: #FFFFCC;
  color: black;
}
.cancel-edit:hover {
  cursor: pointer;
  background: #edaa4e;
}

.tLink {
  padding:5px;
  display:inline-block;
  border-radius:3px 3px 0px 0px;
  background: transparent;
  font-size:16px;
  font-weight:600;
  color:#4c4c4c;
  transition:all linear 0.15s;
}


#dashboard input[type=submit] {
  height: 100%;
  border-radius: 5px;
  float: none;
  margin: 0 auto;
  display: block;
  font-family: GravityLight;
  border: 1px solid black;
  background: #CF5946;
  color: white;
  cursor: pointer;
  width: 150px;
  height: 30px;
  outline: none;
  font-size: 20px;
  line-height: 30px;
  border: 0px;
  margin-top: 10px;
}
#dashboard input[type=submit]:hover {
  cursor: pointer;
  background: #CF5946;
}
#dashboard label {
  display: inline-block;
  width: 200px;
  text-align: right;
  margin-right: 1em;
  font-size: 20px;
}
#dashboard input[type=text] {
  height: 20px;
  width: 200px;
  border-radius: 5px;
  padding: 5px;
  margin: 5px;
  border: 4px;
}

#dashboard input[type=email]{
  height: 20px;
  width: 200px;
  border-radius: 5px;
  padding: 5px;
  margin: 5px;
  border: 4px;
}

#dashboard select {
  height: 30px;
  width: 200px;
  border-radius: 5px;
  padding: 1px;
  margin: 5px;
}

#lean_overlay {
  position: fixed;
  z-index: 100;
  top: 0px;
  left: 0px;
  height: 100%;
  width: 100%;
  background: #000;
  display: none;
}

.popupContainer {
  position: absolute;
  width: 330px;
  height: auto;
  left: 45%;
  top: 80px;
  background: #FFF;
}

.popupHeader {
  font-size: 16px;
  text-transform: uppercase;
  font-family: GravityLight;
}

.popupHeader {
  background: #F4F4F2;
  position: relative;
  padding: 10px 20px;
  padding-top: 12px;
  border-bottom: 1px solid #DDD;
  font-weight: bold;
}

.popupHeader .modal_close {
  position: absolute;
  right: 0;
  top: 0;
  padding: 10px 15px;
  cursor: pointer;
  color: #aaa;
  font-size: 16px;
}

.popupBody {
  padding: 20px;
}

.centeredText {
  text-align: center;
  margin: 20px 0;
  clear: both;
  overflow: hidden;
  text-transform: uppercase;
}

.action_btns {
  clear: both;
  overflow: hidden;
}

.action_btns a {
  display: block;
}
/* ... */

